test: implement tests for StudentService

--- a/practice2025/task02tests/task02tests.csproj
+++ b/practice2025/task02tests/task02tests.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+	<ProjectReference Include="..\task02\task02.csproj"/>
         <Using Include="Xunit"/>
     </ItemGroup>
 
