--- a/practice2025/CommandRunner/CommandRunner.csproj
+++ b/practice2025/CommandRunner/CommandRunner.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -9,5 +9,8 @@
 
     <ItemGroup>
         <ProjectReference Include="..\CommandLib\CommandLib.csproj"/>
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\FileSystemCommands\FileSystemCommands.csproj"/>
     </ItemGroup>
 </Project>
