--- a/practice2025/task08tests/task08tests.csproj
+++ b/practice2025/task08tests/task08tests.csproj
@@ -19,6 +19,7 @@
     <ItemGroup>
         <Using Include="Xunit"/>
         <ProjectReference Include="..\FileSystemCommands\FileSystemCommands.csproj"/>
+	<ProjectReference Include="..\CommandRunner\CommandRunner.csproj"/>
     </ItemGroup>
 
 </Project>
